Added new default users: Admin, User. Logon page is localized..

--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -1,4 +1,13 @@
 
+logon.button.signin  = Sign in
+logon.label.login    = Login
+logon.label.password = Password
+logon.label.signin   = Sign in
+logon.label.title    = SPC CSL Demo
+
 main.ui.logout = Logout
 
 menu.menuItem1 = Item 1
+
+sessionExpired.button.reenter = Reenter
+sessionExpired.label.title    = Your session has expired
