The navigation menu has been added

--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -5,9 +5,10 @@ logon.label.password = Password
 logon.label.signin   = Sign in
 logon.label.title    = SPC CSL Demo
 
-main.ui.logout = Logout
-
-menu.menuItem1 = Item 1
+main.ui.logout                = Logout
+main.ui.menu.cotractRegister  = Register of contracts 
+main.ui.menu.createDocument   = Document creating
+main.ui.menu.estimateRegister = Register of estimate calculations
 
 sessionExpired.button.reenter = Reenter
 sessionExpired.label.title    = Your session has expired
