--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -5,9 +5,10 @@ logon.label.password = \u041F\u0430\u0440\u043E\u043B\u044C
 logon.label.signin   = \u0412\u0445\u043E\u0434
 logon.label.title    = \u0421\u041F\u041A \u041A\u0421\u041B \u0421\u0442\u0435\u043D\u0434
 
-main.ui.logout = \u0412\u044B\u0445\u043E\u0434
-
-menu.menuItem1 = \u041F\u0443\u043D\u043A\u0442 1
+main.ui.logout                = \u0412\u044B\u0445\u043E\u0434
+main.ui.menu.cotractRegister  = \u0420\u0435\u0435\u0441\u0442\u0440 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u043E\u0432
+main.ui.menu.createDocument   = \u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+main.ui.menu.estimateRegister = \u0420\u0435\u0435\u0441\u0442\u0440 \u0441\u043C\u0435\u0442\u043D\u044B\u0445 \u0440\u0430\u0441\u0447\u0435\u0442\u043E\u0432
 
 sessionExpired.button.reenter = \u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u044C
-sessionExpired.label.title    = \u0421\u0435\u0441\u0441\u0438\u044F \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F \u0438\u0441\u0442\u0435\u043A\u043B\u0430
+sessionExpired.label.title    = \u0421\u0435\u0441\u0441\u0438\u044F \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0430
