add i18n on adminView

--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -1,4 +1,6 @@
 
+adminView.button.nameCreateButton = Create
+
 logon.button.signin  = Sign in
 logon.label.login    = Login
 logon.label.password = Password
