--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -1,4 +1,6 @@
 
+adminView.button.nameCreateButton = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
+
 logon.button.signin  = \u0412\u043E\u0439\u0442\u0438
 logon.label.login    = \u041B\u043E\u0433\u0438\u043D
 logon.label.password = \u041F\u0430\u0440\u043E\u043B\u044C
