i18n and modal window

--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -1,5 +1,15 @@
 
 adminView.button.nameCreateButton = Create
+adminView.button.nameSaveButton   = Save
+adminView.caption.delete          = Delete
+adminView.caption.edit            = Edit
+adminView.caption.email           = Email
+adminView.caption.firstName       = First name
+adminView.caption.id              = ID
+adminView.caption.lastName        = Last name
+adminView.caption.login           = Login
+adminView.caption.nameRoles       = Name
+adminView.caption.typeRoles       = Type
 
 logon.button.signin  = Sign in
 logon.label.login    = Login
