--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -1,15 +1,20 @@
 
-adminView.button.nameCreateButton = Create
-adminView.button.nameSaveButton   = Save
-adminView.caption.delete          = Delete
-adminView.caption.edit            = Edit
-adminView.caption.email           = Email
-adminView.caption.firstName       = First name
-adminView.caption.id              = ID
-adminView.caption.lastName        = Last name
-adminView.caption.login           = Login
-adminView.caption.nameRoles       = Name
-adminView.caption.typeRoles       = Type
+adminView.button.nameCreateButton    = Create
+adminView.button.nameSaveButton      = Save
+adminView.caption.delete             = Delete
+adminView.caption.edit               = Edit
+adminView.caption.email              = Email
+adminView.caption.firstName          = First name
+adminView.caption.groupKey           = Group
+adminView.caption.groupsKey          = Groups
+adminView.caption.id                 = ID
+adminView.caption.lastName           = Last name
+adminView.caption.login              = Login
+adminView.caption.nameRoles          = Name
+adminView.caption.newPasswordCaption = New password
+adminView.caption.typeRoles          = Type
+adminView.caption.userKey            = User
+adminView.caption.usersKey           = Users
 
 logon.button.signin  = Sign in
 logon.label.login    = Login
