--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -1,20 +1,23 @@
 
-adminView.button.nameCreateButton    = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
-adminView.button.nameSaveButton      = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
-adminView.caption.delete             = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
-adminView.caption.edit               = \u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C
-adminView.caption.email              = Email
-adminView.caption.firstName          = \u0418\u043C\u044F
-adminView.caption.groupKey           = \u0420\u043E\u043B\u044C
-adminView.caption.groupsKey          = \u0420\u043E\u043B\u0438
-adminView.caption.id                 = ID
-adminView.caption.lastName           = \u0424\u0430\u043C\u0438\u043B\u0438\u044F
-adminView.caption.login              = \u041B\u043E\u0433\u0438\u043D
-adminView.caption.nameRoles          = \u0418\u043C\u044F
-adminView.caption.newPasswordCaption = \u041D\u043E\u0432\u044B\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
-adminView.caption.typeRoles          = \u0422\u0438\u043F
-adminView.caption.userKey            = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C
-adminView.caption.usersKey           = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
+adminView.ConfirmDialog.deleteUser.close = \u041E\u0442\u043C\u0435\u043D\u0430
+adminView.ConfirmDialog.deleteUser.info  = \u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F?
+adminView.ConfirmDialog.deleteUser.ok    = \u041E\u041A
+adminView.button.nameCreateButton        = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
+adminView.button.nameSaveButton          = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+adminView.caption.delete                 = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
+adminView.caption.edit                   = \u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C
+adminView.caption.email                  = Email
+adminView.caption.firstName              = \u0418\u043C\u044F
+adminView.caption.groupKey               = \u0420\u043E\u043B\u044C
+adminView.caption.groupsKey              = \u0420\u043E\u043B\u0438
+adminView.caption.id                     = ID
+adminView.caption.lastName               = \u0424\u0430\u043C\u0438\u043B\u0438\u044F
+adminView.caption.login                  = \u041B\u043E\u0433\u0438\u043D
+adminView.caption.nameRoles              = \u0418\u043C\u044F
+adminView.caption.newPasswordCaption     = \u041D\u043E\u0432\u044B\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
+adminView.caption.typeRoles              = \u0422\u0438\u043F
+adminView.caption.userKey                = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C
+adminView.caption.usersKey               = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
 
 logon.button.signin  = \u0412\u043E\u0439\u0442\u0438
 logon.label.login    = \u041B\u043E\u0433\u0438\u043D
