--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -1,4 +1,5 @@
 
+adminView.ConfirmDialog.deleteGroup.info = Are you sure want to delete the group?
 adminView.ConfirmDialog.deleteUser.close = Close
 adminView.ConfirmDialog.deleteUser.info  = Are you sure want to delete the user?
 adminView.ConfirmDialog.deleteUser.ok    = OK
