--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -1,4 +1,5 @@
 
+adminView.ConfirmDialog.deleteGroup.info = \u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u0440\u043E\u043B\u044C?
 adminView.ConfirmDialog.deleteUser.close = \u041E\u0442\u043C\u0435\u043D\u0430
 adminView.ConfirmDialog.deleteUser.info  = \u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F?
 adminView.ConfirmDialog.deleteUser.ok    = \u041E\u041A
