--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -16,9 +16,16 @@ adminView.caption.lastName               = Last name
 adminView.caption.login                  = Login
 adminView.caption.nameRoles              = Name
 adminView.caption.newPasswordCaption     = New password
+adminView.caption.passwordCaption        = Password
 adminView.caption.typeRoles              = Type
 adminView.caption.userKey                = User
 adminView.caption.usersKey               = Users
+adminView.notification.group.change      = \ changed!
+adminView.notification.group.created     = \ created!
+adminView.notification.group.deleted     = \ deleted!
+adminView.notification.user.change       = \ changed!
+adminView.notification.user.created      = \ created!
+adminView.notification.user.deleted      = \ deleted!
 
 logon.button.signin  = Sign in
 logon.label.login    = Login
