--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -16,9 +16,16 @@ adminView.caption.lastName               = \u0424\u0430\u043C\u0438\u043B\u0438\
 adminView.caption.login                  = \u041B\u043E\u0433\u0438\u043D
 adminView.caption.nameRoles              = \u0418\u043C\u044F
 adminView.caption.newPasswordCaption     = \u041D\u043E\u0432\u044B\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
+adminView.caption.passwordCaption        = \u041F\u0430\u0440\u043E\u043B\u044C
 adminView.caption.typeRoles              = \u0422\u0438\u043F
 adminView.caption.userKey                = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C
 adminView.caption.usersKey               = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
+adminView.notification.group.change      = \ \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0430!
+adminView.notification.group.created     = \ \u0441\u043E\u0437\u0434\u0430\u043D\u0430!
+adminView.notification.group.deleted     = \ \u0443\u0434\u0430\u043B\u0435\u043D\u0430!
+adminView.notification.user.change       = \ \u0438\u0437\u043C\u0435\u043D\u0435\u043D!
+adminView.notification.user.created      = \ \u0441\u043E\u0437\u0434\u0430\u043D!
+adminView.notification.user.deleted      = \ \u0443\u0434\u0430\u043B\u0435\u043D!
 
 logon.button.signin  = \u0412\u043E\u0439\u0442\u0438
 logon.label.login    = \u041B\u043E\u0433\u0438\u043D
