--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -22,10 +22,12 @@ adminView.caption.userKey                = User
 adminView.caption.usersKey               = Users
 adminView.notification.group.change      = \ changed!
 adminView.notification.group.created     = \ created!
-adminView.notification.group.deleted     = \ deleted!
-adminView.notification.user.change       = \ changed!
-adminView.notification.user.created      = \ created!
-adminView.notification.user.deleted      = \ deleted!
+adminView.notification.group.deleted     = Group {0} from user {1} deleted!
+adminView.notification.user.addGroup     = Group {0} added to user {1} !
+adminView.notification.user.addGroupErr  = Group {0} not added to user {1} !
+adminView.notification.user.change       = User {0} is changed!
+adminView.notification.user.created      = User {0} is created!
+adminView.notification.user.deleted      = User {0} is deleted!
 
 logon.button.signin  = Sign in
 logon.label.login    = Login
