--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -22,10 +22,12 @@ adminView.caption.userKey                = \u041F\u043E\u043B\u044C\u0437\u043E\
 adminView.caption.usersKey               = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
 adminView.notification.group.change      = \ \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0430!
 adminView.notification.group.created     = \ \u0441\u043E\u0437\u0434\u0430\u043D\u0430!
-adminView.notification.group.deleted     = \ \u0443\u0434\u0430\u043B\u0435\u043D\u0430!
-adminView.notification.user.change       = \ \u0438\u0437\u043C\u0435\u043D\u0435\u043D!
-adminView.notification.user.created      = \ \u0441\u043E\u0437\u0434\u0430\u043D!
-adminView.notification.user.deleted      = \ \u0443\u0434\u0430\u043B\u0435\u043D!
+adminView.notification.group.deleted     = \u0420\u043E\u043B\u044C {0} \u0443 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F {1} \u0443\u0434\u0430\u043B\u0435\u043D\u0430!
+adminView.notification.user.addGroup     = \u0413\u0440\u0443\u043F\u043F\u0430 {0} \u0434\u043E\u0431\u0430\u0432\u043B\u0435\u043D\u0430 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044E {1} !
+adminView.notification.user.addGroupErr  = \u0413\u0440\u0443\u043F\u043F\u0430 {0} \u043D\u0435 \u0434\u043E\u0431\u0430\u0432\u043B\u0435\u043D\u0430 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044E {1} !
+adminView.notification.user.change       = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C {0} \u0438\u0437\u043C\u0435\u043D\u0435\u043D!
+adminView.notification.user.created      = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C {0} \u0441\u043E\u0437\u0434\u0430\u043D!
+adminView.notification.user.deleted      = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C {0} \u0443\u0434\u0430\u043B\u0435\u043D!
 
 logon.button.signin  = \u0412\u043E\u0439\u0442\u0438
 logon.label.login    = \u041B\u043E\u0433\u0438\u043D
