UI TreeGrid and filter added

--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -41,6 +41,8 @@ adminView.notification.user.created          = \u041F\u043E\u043B\u044C\u0437\u0
 adminView.notification.user.deleted          = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C {0} \u0443\u0434\u0430\u043B\u0435\u043D!
 adminView.notification.user.saveErr          = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C {0} \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D, \u043F\u043E\u0436\u0430\u043B\u0443\u0441\u0442\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u044C\u0442\u0435 \u043D\u0430 \u043D\u0430\u043B\u0438\u0447\u0438\u0435 \u043E\u0448\u0438\u0431\u043E\u043A
 
+createdoc.DocCreatingLayout.searchField.placeholder = \u041F\u043E\u0438\u0441\u043A...
+
 logon.button.signin  = \u0412\u043E\u0439\u0442\u0438
 logon.label.login    = \u041B\u043E\u0433\u0438\u043D
 logon.label.password = \u041F\u0430\u0440\u043E\u043B\u044C
