--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -41,7 +41,8 @@ adminView.notification.user.created          = User {0} is created!
 adminView.notification.user.deleted          = User {0} is deleted!
 adminView.notification.user.saveErr          = Person {0} could not be saved, please check error
 
-createdoc.DocCreatingLayout.searchField.placeholder = Search..
+createdoc.DocCreatingLayout.searchField.placeholder         = Search..
+createdoc.DocCreatingLayout.searchField.searchSettings.desc = Filter settings
 
 logon.button.signin  = Sign in
 logon.label.login    = Login
