Create Document Interface - head buttons added

--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -41,8 +41,11 @@ adminView.notification.user.created          = User {0} is created!
 adminView.notification.user.deleted          = User {0} is deleted!
 adminView.notification.user.saveErr          = Person {0} could not be saved, please check error
 
+createdoc.DocCreatingLayout.addTreeItemButton.desc          = Add item..
+createdoc.DocCreatingLayout.delTreeItemButton.desc          = Remove item..
 createdoc.DocCreatingLayout.searchField.placeholder         = Search..
 createdoc.DocCreatingLayout.searchField.searchSettings.desc = Filter settings
+createdoc.DocCreatingLayout.userLayoutSettings.desc         = User Layout settings
 
 logon.button.signin  = Sign in
 logon.label.login    = Login
