--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -41,8 +41,8 @@ adminView.notification.user.created          = \u041F\u043E\u043B\u044C\u0437\u0
 adminView.notification.user.deleted          = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C {0} \u0443\u0434\u0430\u043B\u0435\u043D!
 adminView.notification.user.saveErr          = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C {0} \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D, \u043F\u043E\u0436\u0430\u043B\u0443\u0441\u0442\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u044C\u0442\u0435 \u043D\u0430 \u043D\u0430\u043B\u0438\u0447\u0438\u0435 \u043E\u0448\u0438\u0431\u043E\u043A
 
-createdoc.DocCreatingLayout.addTreeItemButton.desc          = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u044D\u043B\u0435\u043C\u0435\u043D\u0442
-createdoc.DocCreatingLayout.delTreeItemButton.desc          = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u044D\u043B\u0435\u043C\u0435\u043D\u0442
+createdoc.DocCreatingLayout.addTreeItemButton.desc          = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
+createdoc.DocCreatingLayout.delTreeItemButton.desc          = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
 createdoc.DocCreatingLayout.searchField.placeholder         = \u0424\u0438\u043B\u044C\u0442\u0440 \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442\u043E\u0432...
 createdoc.DocCreatingLayout.searchField.searchSettings.desc = \u041D\u0430\u0439\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0444\u0438\u043B\u044C\u0442\u0440\u0430
 createdoc.DocCreatingLayout.userLayoutSettings.desc         = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044F
