--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -41,11 +41,21 @@ adminView.notification.user.created          = User {0} is created!
 adminView.notification.user.deleted          = User {0} is deleted!
 adminView.notification.user.saveErr          = Person {0} could not be saved, please check error
 
-createdoc.DocCreatingLayout.addTreeItemButton.desc          = Add workset..
-createdoc.DocCreatingLayout.delTreeItemButton.desc          = Remove workset..
-createdoc.DocCreatingLayout.searchField.placeholder         = Search..
-createdoc.DocCreatingLayout.searchField.searchSettings.desc = Filter settings
-createdoc.DocCreatingLayout.userLayoutSettings.desc         = User Layout settings
+createdoc.DocCreatingLayout.addWorksetButton.desc            = Add workset..
+createdoc.DocCreatingLayout.delWorksetButton.desc            = Remove workset..
+createdoc.DocCreatingLayout.projectTreeCaption               = Project tree
+createdoc.DocCreatingLayout.userLayoutSettings.desc          = User Layout settings
+createdoc.DocCreatingLayout.worksetFilterField.placeholder   = Search..
+createdoc.DocCreatingLayout.worksetFilterSettingsButton.desc = Filter settings
+createdoc.DocCreatingLayout.worksetGrid.columns.changedate   = Change date
+createdoc.DocCreatingLayout.worksetGrid.columns.code         = Code
+createdoc.DocCreatingLayout.worksetGrid.columns.createdate   = Create date
+createdoc.DocCreatingLayout.worksetGrid.columns.id           = ID
+createdoc.DocCreatingLayout.worksetGrid.columns.name         = Name
+createdoc.DocCreatingLayout.worksetGrid.columns.pir          = PIR
+createdoc.DocCreatingLayout.worksetGrid.columns.planobj      = Plan object
+createdoc.DocCreatingLayout.worksetGrid.columns.smr          = SMR
+createdoc.DocCreatingLayout.worksetGrid.columns.ver          = Version
 
 logon.button.signin  = Sign in
 logon.label.login    = Login
