--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -43,6 +43,7 @@ adminView.notification.user.saveErr          = Person {0} could not be saved, pl
 
 createdoc.DocCreatingLayout.addWorksetButton.desc            = Add workset..
 createdoc.DocCreatingLayout.delWorksetButton.desc            = Remove workset..
+createdoc.DocCreatingLayout.downloadWorksetButton.desc       = Download Excel Work sets
 createdoc.DocCreatingLayout.projectTreeCaption               = Project tree
 createdoc.DocCreatingLayout.userLayoutSettings.desc          = User Layout settings
 createdoc.DocCreatingLayout.worksetFilterField.placeholder   = Search..
