--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -43,6 +43,7 @@ adminView.notification.user.saveErr          = \u041F\u043E\u043B\u044C\u0437\u0
 
 createdoc.DocCreatingLayout.addWorksetButton.desc            = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
 createdoc.DocCreatingLayout.delWorksetButton.desc            = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
+createdoc.DocCreatingLayout.downloadWorksetButton.desc       = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0432 Excel 
 createdoc.DocCreatingLayout.projectTreeCaption               = \u0414\u0435\u0440\u0435\u0432\u043E \u043F\u0440\u043E\u0435\u043A\u0442\u043E\u0432
 createdoc.DocCreatingLayout.userLayoutSettings.desc          = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044F
 createdoc.DocCreatingLayout.worksetFilterField.placeholder   = \u0424\u0438\u043B\u044C\u0442\u0440 \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442\u043E\u0432...
