Abstract class UISettingsWindow to edit UI settings

--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -71,3 +71,6 @@ main.ui.menu.estimateRegister = \u0420\u0435\u0435\u0441\u0442\u0440 \u0441\u043
 
 sessionExpired.button.reenter = \u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u044C
 sessionExpired.label.title    = \u0421\u0435\u0441\u0441\u0438\u044F \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0430
+
+settings.UISettingsWindow.cancelButton.cap = \u041E\u0442\u043C\u0435\u043D\u0430
+settings.UISettingsWindow.saveButton.cap   = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
