--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -71,3 +71,6 @@ main.ui.menu.estimateRegister = Register of estimate calculations
 
 sessionExpired.button.reenter = Reenter
 sessionExpired.label.title    = Your session has expired
+
+settings.UISettingsWindow.cancelButton.cap = Cancel
+settings.UISettingsWindow.saveButton.cap   = Save
