--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -5,6 +5,7 @@ adminView.ConfirmDialog.deleteUser.info      = \u0412\u044B \u0434\u0435\u0439\u
 adminView.ConfirmDialog.deleteUser.ok        = \u041E\u041A
 adminView.button.nameCreateButton            = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
 adminView.button.nameSaveButton              = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+adminView.caption.admin                      = \u0410\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439
 adminView.caption.delete                     = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
 adminView.caption.edit                       = \u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C
 adminView.caption.editGroupUser              = \u041F\u043E\u043B\u043D\u043E\u043C\u043E\u0447\u0438\u044F
@@ -23,6 +24,9 @@ adminView.caption.typeRoles                  = \u0422\u0438\u043F
 adminView.caption.userKey                    = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C
 adminView.caption.usersKey                   = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
 adminView.caption.view                       = \u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440
+adminView.necessary.group.id                 = ID \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043F\u0443\u0441\u0442\u044B\u043C
+adminView.necessary.group.name               = \u0418\u043C\u044F \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043F\u0443\u0441\u0442\u044B\u043C
+adminView.necessary.group.type               = \u0422\u0438\u043F \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043F\u0443\u0441\u0442\u044B\u043C
 adminView.necessary.user.email               = Email \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043F\u0443\u0441\u0442\u044B\u043C
 adminView.necessary.user.emailValid          = \u041D\u0435\u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u044B\u0439 \u0430\u0434\u0440\u0435\u0441 \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u043E\u0439 \u043F\u043E\u0447\u0442\u044B
 adminView.necessary.user.firstName           = \u0418\u043C\u044F \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043F\u0443\u0441\u0442\u044B\u043C
@@ -40,6 +44,7 @@ adminView.notification.user.change           = \u041F\u043E\u043B\u044C\u0437\u0
 adminView.notification.user.created          = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C {0} \u0441\u043E\u0437\u0434\u0430\u043D!
 adminView.notification.user.deleted          = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C {0} \u0443\u0434\u0430\u043B\u0435\u043D!
 adminView.notification.user.saveErr          = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C {0} \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D, \u043F\u043E\u0436\u0430\u043B\u0443\u0441\u0442\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u044C\u0442\u0435 \u043D\u0430 \u043D\u0430\u043B\u0438\u0447\u0438\u0435 \u043E\u0448\u0438\u0431\u043E\u043A
+adminView.placeholder.searchfield            = \u041F\u043E\u0438\u0441\u043A..
 
 createdoc.DocCreatingLayout.addWorksetButton.desc            = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
 createdoc.DocCreatingLayout.delWorksetButton.desc            = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
