UI Settings tree grouping

--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -5,6 +5,7 @@ adminView.ConfirmDialog.deleteUser.info      = Are you sure want to delete the u
 adminView.ConfirmDialog.deleteUser.ok        = OK
 adminView.button.nameCreateButton            = Create
 adminView.button.nameSaveButton              = Save
+adminView.caption.admin                      = User Administration
 adminView.caption.delete                     = Delete
 adminView.caption.edit                       = Edit
 adminView.caption.editGroupUser              = Groups
@@ -23,12 +24,15 @@ adminView.caption.typeRoles                  = Type
 adminView.caption.userKey                    = User
 adminView.caption.usersKey                   = Users
 adminView.caption.view                       = View
-adminView.necessary.user.email               = Email may not be empty
+adminView.necessary.group.id                 = ID cannot be empty
+adminView.necessary.group.name               = Name cannot be empty
+adminView.necessary.group.type               = Type cannot be empty
+adminView.necessary.user.email               = Email cannot be empty
 adminView.necessary.user.emailValid          = Not a valid email address
-adminView.necessary.user.firstName           = First name may not be empty
-adminView.necessary.user.lastName            = Last name may not be empty
-adminView.necessary.user.login               = Login may not be empty
-adminView.necessary.user.password            = Password may not be empty
+adminView.necessary.user.firstName           = First name cannot be empty
+adminView.necessary.user.lastName            = Last name cannot be empty
+adminView.necessary.user.login               = Login cannot be empty
+adminView.necessary.user.password            = Password cannot be empty
 adminView.necessary.user.passwordValid       = Password must be at least 7 characters long
 adminView.notification.group.change          = Group {0} is changed!
 adminView.notification.group.created         = Group {0} is created!
@@ -40,6 +44,10 @@ adminView.notification.user.change           = User {0} is changed!
 adminView.notification.user.created          = User {0} is created!
 adminView.notification.user.deleted          = User {0} is deleted!
 adminView.notification.user.saveErr          = Person {0} could not be saved, please check error
+adminView.placeholder.searchfield            = Search..
+
+createDocSettingsWindow.caption             = Document Creating UI - Settings
+createDocSettingsWindow.projectTree.caption = Grouping settings
 
 createdoc.DocCreatingLayout.addWorksetButton.desc            = Add workset..
 createdoc.DocCreatingLayout.delWorksetButton.desc            = Remove workset..
