--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -1,4 +1,6 @@
 
+>>>>>>>\ branch\ 'sources'\ of\ https = //github.com/rkoryakov/gzpn-spc-csl.git
+
 adminView.ConfirmDialog.deleteGroup.info     = Are you sure want to delete the group?
 adminView.ConfirmDialog.deleteUser.close     = Close
 adminView.ConfirmDialog.deleteUser.info      = Are you sure want to delete the user?
@@ -20,6 +22,7 @@ adminView.caption.login                      = Login
 adminView.caption.nameRoles                  = Name
 adminView.caption.newPasswordCaption         = New password
 adminView.caption.passwordCaption            = Password
+adminView.caption.project                    = Project \u0420ermissions
 adminView.caption.typeRoles                  = Type
 adminView.caption.userKey                    = User
 adminView.caption.usersKey                   = Users
@@ -45,12 +48,9 @@ adminView.notification.user.created          = User {0} is created!
 adminView.notification.user.deleted          = User {0} is deleted!
 adminView.notification.user.saveErr          = Person {0} could not be saved, please check error
 adminView.placeholder.searchfield            = Search..
-<<<<<<< HEAD
 
 createDocSettingsWindow.caption             = Document Creating UI - Settings
 createDocSettingsWindow.projectTree.caption = Grouping settings
-=======
->>>>>>> branch 'sources' of https://github.com/rkoryakov/gzpn-spc-csl.git
 
 createdoc.DocCreatingLayout.addWorksetButton.desc            = Add workset..
 createdoc.DocCreatingLayout.delWorksetButton.desc            = Remove workset..
