--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -83,5 +83,5 @@ main.ui.menu.estimateRegister = Register of estimate calculations
 sessionExpired.button.reenter = Reenter
 sessionExpired.label.title    = Your session has expired
 
-settings.UISettingsWindow.cancelButton.cap = Cancel
-settings.UISettingsWindow.saveButton.cap   = Save
+settings.UISettingsWindow.cancelButton.cap = Close
+settings.UISettingsWindow.saveButton.cap   = Save and close
