Create Document UI - Document layout

--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -80,6 +80,9 @@ main.ui.menu.cotractRegister  = Register of contracts
 main.ui.menu.createDocument   = Document creating
 main.ui.menu.estimateRegister = Register of estimate calculations
 
+ru.gzpn.spc.csl.model.enums.DocType.local_estimate  = Local estimate
+ru.gzpn.spc.csl.model.enums.DocType.set_of_drawings = Set of drawings
+
 sessionExpired.button.reenter = Reenter
 sessionExpired.label.title    = Your session has expired
 
