--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -54,6 +54,15 @@ createDocSettingsWindow.projectTree.caption = Grouping settings
 
 createdoc.DocCreatingLayout.addWorksetButton.desc            = Add workset..
 createdoc.DocCreatingLayout.delWorksetButton.desc            = Remove workset..
+createdoc.DocCreatingLayout.documentGrid.columns.changedate  = Change Date
+createdoc.DocCreatingLayout.documentGrid.columns.code        = Code
+createdoc.DocCreatingLayout.documentGrid.columns.createdate  = Create Date
+createdoc.DocCreatingLayout.documentGrid.columns.id          = Id
+createdoc.DocCreatingLayout.documentGrid.columns.name        = Name
+createdoc.DocCreatingLayout.documentGrid.columns.type        = Type
+createdoc.DocCreatingLayout.documentGrid.columns.version     = Version
+createdoc.DocCreatingLayout.documentGrid.columns.work        = Work
+createdoc.DocCreatingLayout.documentGrid.columns.workset     = Work set
 createdoc.DocCreatingLayout.downloadWorksetButton.desc       = Download Excel Work sets
 createdoc.DocCreatingLayout.projectTreeCaption               = Project tree
 createdoc.DocCreatingLayout.userLayoutSettings.desc          = User Layout settings
@@ -82,6 +91,8 @@ main.ui.menu.estimateRegister = Register of estimate calculations
 
 ru.gzpn.spc.csl.model.enums.DocType.local_estimate  = Local estimate
 ru.gzpn.spc.csl.model.enums.DocType.set_of_drawings = Set of drawings
+ru.gzpn.spc.csl.model.enums.WorkType.pir            = PIR
+ru.gzpn.spc.csl.model.enums.WorkType.smr            = SMR
 
 sessionExpired.button.reenter = Reenter
 sessionExpired.label.title    = Your session has expired
