--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -54,6 +54,15 @@ createDocSettingsWindow.projectTree.caption = \u041D\u0430\u0441\u0442\u0440\u04
 
 createdoc.DocCreatingLayout.addWorksetButton.desc            = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
 createdoc.DocCreatingLayout.delWorksetButton.desc            = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
+createdoc.DocCreatingLayout.documentGrid.columns.changedate  = \u0414\u0430\u0442\u0430 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
+createdoc.DocCreatingLayout.documentGrid.columns.code        = \u041A\u043E\u0434
+createdoc.DocCreatingLayout.documentGrid.columns.createdate  = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
+createdoc.DocCreatingLayout.documentGrid.columns.id          = \u0418\u0434
+createdoc.DocCreatingLayout.documentGrid.columns.name        = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+createdoc.DocCreatingLayout.documentGrid.columns.type        = \u0422\u0438\u043F
+createdoc.DocCreatingLayout.documentGrid.columns.version     = \u0412\u0435\u0440\u0441\u0438\u044F
+createdoc.DocCreatingLayout.documentGrid.columns.work        = \u0420\u0430\u0431\u043E\u0442\u0430
+createdoc.DocCreatingLayout.documentGrid.columns.workset     = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
 createdoc.DocCreatingLayout.downloadWorksetButton.desc       = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0432 Excel 
 createdoc.DocCreatingLayout.projectTreeCaption               = \u0414\u0435\u0440\u0435\u0432\u043E \u043F\u0440\u043E\u0435\u043A\u0442\u043E\u0432
 createdoc.DocCreatingLayout.userLayoutSettings.desc          = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044F
@@ -82,6 +91,8 @@ main.ui.menu.estimateRegister = \u0420\u0435\u0435\u0441\u0442\u0440 \u0441\u043
 
 ru.gzpn.spc.csl.model.enums.DocType.local_estimate  = \u041B\u043E\u043A\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
 ru.gzpn.spc.csl.model.enums.DocType.set_of_drawings = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442 \u0447\u0435\u0440\u0447\u0435\u0436\u0435\u0439
+ru.gzpn.spc.csl.model.enums.WorkType.pir            = \u041F\u0418\u0420
+ru.gzpn.spc.csl.model.enums.WorkType.smr            = \u0421\u041C\u0420
 
 sessionExpired.button.reenter = \u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u044C
 sessionExpired.label.title    = \u0421\u0435\u0441\u0441\u0438\u044F \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0430
