--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -1,4 +1,7 @@
 
+ItemCreatingWindow.cancelButton.cap = Cancel
+ItemCreatingWindow.saveButton.cap   = Save and close
+
 adminView.ConfirmDialog.deleteGroup.info     = Are you sure want to delete the group?
 adminView.ConfirmDialog.deleteUser.close     = Close
 adminView.ConfirmDialog.deleteUser.info      = Are you sure want to delete the user?
