Test for creating BD data updated

--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -1,6 +1,6 @@
 
-ItemCreatingWindow.cancelButton.cap = Cancel
-ItemCreatingWindow.saveButton.cap   = Save and close
+ItemCreatingWindow.addButton.cap   = Save and close
+ItemCreatingWindow.closeButton.cap = Cancel
 
 adminView.ConfirmDialog.deleteGroup.info     = Are you sure want to delete the group?
 adminView.ConfirmDialog.deleteUser.close     = Close
