--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -95,10 +95,13 @@ main.ui.menu.cotractRegister  = Register of contracts
 main.ui.menu.createDocument   = Document creating
 main.ui.menu.estimateRegister = Register of estimate calculations
 
-ru.gzpn.spc.csl.model.enums.DocType.local_estimate  = Local estimate
-ru.gzpn.spc.csl.model.enums.DocType.set_of_drawings = Set of drawings
-ru.gzpn.spc.csl.model.enums.WorkType.pir            = PIR
-ru.gzpn.spc.csl.model.enums.WorkType.smr            = SMR
+ru.gzpn.spc.csl.model.enums.DocType.local_estimate        = Local estimate
+ru.gzpn.spc.csl.model.enums.DocType.set_of_drawings       = Set of drawings
+ru.gzpn.spc.csl.model.enums.TaxType.INCLUDING_18_PERC     = With 18 perc
+ru.gzpn.spc.csl.model.enums.TaxType.NO                    = No
+ru.gzpn.spc.csl.model.enums.TaxType.NOT_INCLUDING_18_PERC = Without 18 perc
+ru.gzpn.spc.csl.model.enums.WorkType.pir                  = PIR
+ru.gzpn.spc.csl.model.enums.WorkType.smr                  = SMR
 
 sessionExpired.button.reenter = Reenter
 sessionExpired.label.title    = Your session has expired
