--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -95,10 +95,13 @@ main.ui.menu.cotractRegister  = \u0420\u0435\u0435\u0441\u0442\u0440 \u0434\u043
 main.ui.menu.createDocument   = \u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 main.ui.menu.estimateRegister = \u0420\u0435\u0435\u0441\u0442\u0440 \u0441\u043C\u0435\u0442\u043D\u044B\u0445 \u0440\u0430\u0441\u0447\u0435\u0442\u043E\u0432
 
-ru.gzpn.spc.csl.model.enums.DocType.local_estimate  = \u041B\u043E\u043A\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
-ru.gzpn.spc.csl.model.enums.DocType.set_of_drawings = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442 \u0447\u0435\u0440\u0447\u0435\u0436\u0435\u0439
-ru.gzpn.spc.csl.model.enums.WorkType.pir            = \u041F\u0418\u0420
-ru.gzpn.spc.csl.model.enums.WorkType.smr            = \u0421\u041C\u0420
+ru.gzpn.spc.csl.model.enums.DocType.local_estimate        = \u041B\u043E\u043A\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
+ru.gzpn.spc.csl.model.enums.DocType.set_of_drawings       = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442 \u0447\u0435\u0440\u0447\u0435\u0436\u0435\u0439
+ru.gzpn.spc.csl.model.enums.TaxType.INCLUDING_18_PERC     = \u0412\u043A\u043B\u044E\u0447. 18 \u043F\u0440\u043E\u0446.
+ru.gzpn.spc.csl.model.enums.TaxType.NO                    = \u041D\u0435\u0442
+ru.gzpn.spc.csl.model.enums.TaxType.NOT_INCLUDING_18_PERC = \u0411\u0435\u0437 18 \u043F\u0440\u043E\u0446.
+ru.gzpn.spc.csl.model.enums.WorkType.pir                  = \u041F\u0418\u0420
+ru.gzpn.spc.csl.model.enums.WorkType.smr                  = \u0421\u041C\u0420
 
 sessionExpired.button.reenter = \u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u044C
 sessionExpired.label.title    = \u0421\u0435\u0441\u0441\u0438\u044F \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0430
