--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -9,6 +9,9 @@ adminView.ConfirmDialog.deleteUser.ok        = OK
 adminView.button.nameCreateButton            = Create
 adminView.button.nameSaveButton              = Save
 adminView.caption.admin                      = User Administration
+adminView.caption.changedate                 = Change date
+adminView.caption.code                       = Code
+adminView.caption.createdate                 = Create date
 adminView.caption.delete                     = Delete
 adminView.caption.edit                       = Edit
 adminView.caption.editGroupUser              = Groups
@@ -17,16 +20,21 @@ adminView.caption.email                      = Email
 adminView.caption.firstName                  = First name
 adminView.caption.groupKey                   = Group
 adminView.caption.groupsKey                  = Groups
+adminView.caption.hp                         = Heavy project
 adminView.caption.id                         = ID
 adminView.caption.lastName                   = Last name
 adminView.caption.login                      = Login
-adminView.caption.nameRoles                  = Name
+adminView.caption.milestone                  = Milestone
+adminView.caption.name                       = Name
 adminView.caption.newPasswordCaption         = New password
 adminView.caption.passwordCaption            = Password
+adminView.caption.phase                      = Phase
 adminView.caption.project                    = Project \u0420ermissions
-adminView.caption.typeRoles                  = Type
+adminView.caption.stage                      = Stage
+adminView.caption.type                       = Type
 adminView.caption.userKey                    = User
 adminView.caption.usersKey                   = Users
+adminView.caption.version                    = Version
 adminView.caption.view                       = View
 adminView.necessary.group.id                 = ID cannot be empty
 adminView.necessary.group.name               = Name cannot be empty
@@ -49,6 +57,8 @@ adminView.notification.user.created          = User {0} is created!
 adminView.notification.user.deleted          = User {0} is deleted!
 adminView.notification.user.saveErr          = Person {0} could not be saved, please check error
 adminView.placeholder.searchfield            = Search..
+adminView.project.combobox.capital           = Capital projects
+adminView.project.combobox.heavy             = Heavy projects
 
 createDocSettingsWindow.caption             = Document Creating UI - Settings
 createDocSettingsWindow.projectTree.caption = Grouping settings
