--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -9,6 +9,9 @@ adminView.ConfirmDialog.deleteUser.ok        = \u041E\u041A
 adminView.button.nameCreateButton            = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
 adminView.button.nameSaveButton              = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
 adminView.caption.admin                      = \u0410\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439
+adminView.caption.changedate                 = \u0414\u0430\u0442\u0430 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
+adminView.caption.code                       = \u041A\u043E\u0434
+adminView.caption.createdate                 = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
 adminView.caption.delete                     = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
 adminView.caption.edit                       = \u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C
 adminView.caption.editGroupUser              = \u041F\u043E\u043B\u043D\u043E\u043C\u043E\u0447\u0438\u044F
@@ -17,16 +20,21 @@ adminView.caption.email                      = Email
 adminView.caption.firstName                  = \u0418\u043C\u044F
 adminView.caption.groupKey                   = \u0420\u043E\u043B\u044C
 adminView.caption.groupsKey                  = \u0420\u043E\u043B\u0438
+adminView.caption.hp                         = \u041A\u0440\u0443\u043F\u043D\u044B\u0439 \u043F\u0440\u043E\u0435\u043A\u0442
 adminView.caption.id                         = ID
 adminView.caption.lastName                   = \u0424\u0430\u043C\u0438\u043B\u0438\u044F
 adminView.caption.login                      = \u041B\u043E\u0433\u0438\u043D
-adminView.caption.nameRoles                  = \u0418\u043C\u044F
+adminView.caption.milestone                  = \u042D\u0442\u0430\u043F
+adminView.caption.name                       = \u0418\u043C\u044F
 adminView.caption.newPasswordCaption         = \u041D\u043E\u0432\u044B\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
 adminView.caption.passwordCaption            = \u041F\u0430\u0440\u043E\u043B\u044C
+adminView.caption.phase                      = \u0424\u0430\u0437\u0430
 adminView.caption.project                    = \u041F\u0440\u043E\u0435\u043A\u0442\u043D\u044B\u0435 \u0440\u0430\u0437\u0440\u0435\u0448\u0435\u043D\u0438\u044F
-adminView.caption.typeRoles                  = \u0422\u0438\u043F
+adminView.caption.stage                      = \u0421\u0442\u0430\u0434\u0438\u044F
+adminView.caption.type                       = \u0422\u0438\u043F
 adminView.caption.userKey                    = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C
 adminView.caption.usersKey                   = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
+adminView.caption.version                    = \u0412\u0435\u0440\u0441\u0438\u044F
 adminView.caption.view                       = \u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440
 adminView.necessary.group.id                 = ID \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043F\u0443\u0441\u0442\u044B\u043C
 adminView.necessary.group.name               = \u0418\u043C\u044F \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043F\u0443\u0441\u0442\u044B\u043C
@@ -49,6 +57,8 @@ adminView.notification.user.created          = \u041F\u043E\u043B\u044C\u0437\u0
 adminView.notification.user.deleted          = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C {0} \u0443\u0434\u0430\u043B\u0435\u043D!
 adminView.notification.user.saveErr          = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C {0} \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D, \u043F\u043E\u0436\u0430\u043B\u0443\u0441\u0442\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u044C\u0442\u0435 \u043D\u0430 \u043D\u0430\u043B\u0438\u0447\u0438\u0435 \u043E\u0448\u0438\u0431\u043E\u043A
 adminView.placeholder.searchfield            = \u041F\u043E\u0438\u0441\u043A..
+adminView.project.combobox.capital           = \u041A\u0430\u043F\u0438\u0442\u0430\u043B\u044C\u043D\u044B\u0435 \u043F\u0440\u043E\u0435\u043A\u0442\u044B
+adminView.project.combobox.heavy             = \u041A\u0440\u0443\u043F\u043D\u044B\u0435 \u043F\u0440\u043E\u0435\u043A\u0442\u044B
 
 createDocSettingsWindow.caption             = \u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430 - \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
 createDocSettingsWindow.projectTree.caption = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430 \u0433\u0440\u0443\u043F\u043F\u0438\u0440\u043E\u0432\u043A\u0438
