--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -59,6 +59,10 @@ adminView.notification.user.saveErr          = Person {0} could not be saved, pl
 adminView.placeholder.searchfield            = Search..
 adminView.project.combobox.capital           = Capital projects
 adminView.project.combobox.heavy             = Heavy projects
+adminView.project.notification.addGroupErr   = Group {0} not added to project id {1} !
+adminView.project.notification.addGroupMes   = Group {0} added to project id {1} !
+adminView.project.notification.delGroupErr   = Group {0} not deleted from project id {1} !
+adminView.project.notification.delGroupMes   = Group {0} deleted from project id {1} !
 
 createDocSettingsWindow.caption             = Document Creating UI - Settings
 createDocSettingsWindow.projectTree.caption = Grouping settings
