--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -59,6 +59,10 @@ adminView.notification.user.saveErr          = \u041F\u043E\u043B\u044C\u0437\u0
 adminView.placeholder.searchfield            = \u041F\u043E\u0438\u0441\u043A..
 adminView.project.combobox.capital           = \u041A\u0430\u043F\u0438\u0442\u0430\u043B\u044C\u043D\u044B\u0435 \u043F\u0440\u043E\u0435\u043A\u0442\u044B
 adminView.project.combobox.heavy             = \u041A\u0440\u0443\u043F\u043D\u044B\u0435 \u043F\u0440\u043E\u0435\u043A\u0442\u044B
+adminView.project.notification.addGroupErr   = \u0413\u0440\u0443\u043F\u043F\u0430 {0} \u043D\u0435 \u0434\u043E\u0431\u0430\u0432\u043B\u0435\u043D\u0430 \u043A \u043F\u0440\u043E\u0435\u043A\u0442\u0443 id {1} !
+adminView.project.notification.addGroupMes   = \u0413\u0440\u0443\u043F\u043F\u0430 {0} \u0434\u043E\u0431\u0430\u0432\u043B\u0435\u043D\u0430 \u043A \u043F\u0440\u043E\u0435\u043A\u0442\u0443 id {1} !
+adminView.project.notification.delGroupErr   = \u0413\u0440\u0443\u043F\u043F\u0430 {0} \u043D\u0435 \u0443\u0434\u0430\u043B\u0435\u043D\u0430 \u0438\u0437 \u043F\u0440\u043E\u0435\u043A\u0442\u0430 id {1} !
+adminView.project.notification.delGroupMes   = \u0413\u0440\u0443\u043F\u043F\u0430 {0} \u0443\u0434\u0430\u043B\u0435\u043D\u0430 \u0438\u0437 \u043F\u0440\u043E\u0435\u043A\u0442\u0430 id {1} !
 
 createDocSettingsWindow.caption             = \u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430 - \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
 createDocSettingsWindow.projectTree.caption = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430 \u0433\u0440\u0443\u043F\u043F\u0438\u0440\u043E\u0432\u043A\u0438
