--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -8,6 +8,9 @@ Entities.CProject.code         = Code
 Entities.CProject.name         = Name
 Entities.Contract              = Contract
 Entities.Document              = Document
+Entities.Document.code         = Code
+Entities.Document.name         = Name
+Entities.Document.type         = Type
 Entities.EstimateCalculation   = Estimate Calculation
 Entities.EstimateCost          = Estimate Cost
 Entities.EstimateHead          = Estimate Head
