--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -8,6 +8,9 @@ Entities.CProject.code         = \u041A\u043E\u0434
 Entities.CProject.name         = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 Entities.Contract              = \u0414\u043E\u0433\u043E\u0432\u043E\u0440
 Entities.Document              = \u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442
+Entities.Document.code         = \u041A\u043E\u0434
+Entities.Document.name         = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.Document.type         = \u0412\u0438\u0434
 Entities.EstimateCalculation   = \u0421\u043C\u0435\u0442\u043D\u044B\u0439 \u0440\u0430\u0441\u0447\u0435\u0442
 Entities.EstimateCost          = \u0421\u043C\u0435\u0442\u043D\u0430\u044F \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
 Entities.EstimateHead          = \u0413\u043B\u0430\u0432\u0430
