UI Settings columns

--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -99,6 +99,7 @@ adminView.project.notification.addGroupMes   = Group {0} added to project id {1}
 adminView.project.notification.delGroupErr   = Group {0} not deleted from project id {1} !
 adminView.project.notification.delGroupMes   = Group {0} deleted from project id {1} !
 
+createDocSettingsWindow.addButton.cap        = Add new header
 createDocSettingsWindow.caption              = Document Creating UI - Settings
 createDocSettingsWindow.projectTree.caption  = Grouping settings
 createDocSettingsWindow.tabSheet.columns.cap = Columns
@@ -141,9 +142,12 @@ ru.gzpn.spc.csl.model.enums.WorkType.smr                  = SMR
 sessionExpired.button.reenter = Reenter
 sessionExpired.label.title    = Your session has expired
 
-settings.UISettingsWindow.cancelButton.cap     = Close
-settings.UISettingsWindow.saveButton.cap       = Save and close
-settings.columnsGrid.columns.entity            = Entity
-settings.columnsGrid.columns.id                = ID
-settings.columnsGrid.columns.mergedHeadColumns = To header
-settings.columnsGrid.columns.visible           = Visibility
+settings.UISettingsWindow.cancelButton.cap = Close
+settings.UISettingsWindow.saveButton.cap   = Save and close
+settings.columnsGrid.columns.entity        = Entity
+settings.columnsGrid.columns.header        = Header
+settings.columnsGrid.columns.id            = ID
+settings.columnsGrid.columns.visible       = Visibility
+settings.headersGrid.columns.header        = Header
+settings.headersGrid.columns.id            = ID
+settings.headersGrid.columns.visible       = Visibility
