--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -99,6 +99,7 @@ adminView.project.notification.addGroupMes   = \u0413\u0440\u0443\u043F\u043F\u0
 adminView.project.notification.delGroupErr   = \u0413\u0440\u0443\u043F\u043F\u0430 {0} \u043D\u0435 \u0443\u0434\u0430\u043B\u0435\u043D\u0430 \u0438\u0437 \u043F\u0440\u043E\u0435\u043A\u0442\u0430 id {1} !
 adminView.project.notification.delGroupMes   = \u0413\u0440\u0443\u043F\u043F\u0430 {0} \u0443\u0434\u0430\u043B\u0435\u043D\u0430 \u0438\u0437 \u043F\u0440\u043E\u0435\u043A\u0442\u0430 id {1} !
 
+createDocSettingsWindow.addButton.cap        = \u041D\u043E\u0432\u044B\u0439 \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
 createDocSettingsWindow.caption              = \u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430 - \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
 createDocSettingsWindow.projectTree.caption  = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430 \u0433\u0440\u0443\u043F\u043F\u0438\u0440\u043E\u0432\u043A\u0438
 createDocSettingsWindow.tabSheet.columns.cap = \u0421\u0442\u043E\u043B\u0431\u0446\u044B
@@ -141,9 +142,12 @@ ru.gzpn.spc.csl.model.enums.WorkType.smr                  = \u0421\u041C\u0420
 sessionExpired.button.reenter = \u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u044C
 sessionExpired.label.title    = \u0421\u0435\u0441\u0441\u0438\u044F \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0430
 
-settings.UISettingsWindow.cancelButton.cap     = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
-settings.UISettingsWindow.saveButton.cap       = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0438 \u0437\u0430\u043A\u0440\u044B\u0442\u044C
-settings.columnsGrid.columns.entity            = \u0421\u0443\u0449\u043D\u043E\u0441\u0442\u044C
-settings.columnsGrid.columns.id                = \u0418\u0434. \u043F\u043E\u043B\u044F
-settings.columnsGrid.columns.mergedHeadColumns = \u0412 \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
-settings.columnsGrid.columns.visible           = \u0412\u0438\u0434\u0438\u043C\u043E\u0441\u0442\u044C
+settings.UISettingsWindow.cancelButton.cap = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
+settings.UISettingsWindow.saveButton.cap   = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0438 \u0437\u0430\u043A\u0440\u044B\u0442\u044C
+settings.columnsGrid.columns.entity        = \u0421\u0443\u0449\u043D\u043E\u0441\u0442\u044C
+settings.columnsGrid.columns.header        = \u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
+settings.columnsGrid.columns.id            = \u0418\u0434. \u043F\u043E\u043B\u044F
+settings.columnsGrid.columns.visible       = \u0412\u0438\u0434\u0438\u043C\u043E\u0441\u0442\u044C
+settings.headersGrid.columns.header        = \u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
+settings.headersGrid.columns.id            = \u0418\u0434.\u0437\u0430\u0433\u043E\u043B\u0432\u043A\u0430
+settings.headersGrid.columns.visible       = \u0412\u0438\u0434\u0438\u043C\u043E\u0441\u0442\u044C
