--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -37,6 +37,9 @@ Entities.WorkSet.smr           = SMR
 ItemCreatingWindow.addButton.cap   = Save and close
 ItemCreatingWindow.closeButton.cap = Cancel
 
+RegisterComponent.createItemButton.cap = Create
+RegisterComponent.openItemButton.cap   = Open
+
 adminView.ConfirmDialog.deleteGroup.info     = Are you sure want to delete the group?
 adminView.ConfirmDialog.deleteUser.close     = Close
 adminView.ConfirmDialog.deleteUser.info      = Are you sure want to delete the user?
