--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -12,8 +12,8 @@ Entities.Contract.createDate            = Create date
 Entities.Contract.customerName          = Customer
 Entities.Contract.executorName          = Executor
 Entities.Document                       = Document
-Entities.Document.code                  = Code
-Entities.Document.name                  = Name
+Entities.Document.code                  = Document Number
+Entities.Document.name                  = Designation
 Entities.Document.type                  = Type
 Entities.EstimateCalculation            = Estimate Calculation
 Entities.EstimateCalculation.code       = Code
@@ -39,9 +39,9 @@ Entities.Work                           = Work
 Entities.WorkSet                        = Work Set
 Entities.WorkSet.code                   = Code
 Entities.WorkSet.name                   = Name
-Entities.WorkSet.pir                    = PIR
+Entities.WorkSet.pir                    = Work code PIR
 Entities.WorkSet.planObject             = Plan Object
-Entities.WorkSet.smr                    = SMR
+Entities.WorkSet.smr                    = Work code SMR
 
 ItemCreatingWindow.addButton.cap   = Save and close
 ItemCreatingWindow.closeButton.cap = Cancel
