--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -27,11 +27,14 @@ Entities.HProject                       = Heavy Project
 Entities.HProject.code                  = Code
 Entities.HProject.name                  = Name
 Entities.LocalEstimate                  = Local Estimate
+Entities.Mark                           = Mark
+Entities.Mark.name                      = Name
 Entities.Milestone                      = Milestone
 Entities.ObjectEstimate                 = Object Estimate
 Entities.Phase                          = Phase
 Entities.PlanObject                     = Plan Object
 Entities.PlanObject.code                = Code
+Entities.PlanObject.cproject            = Capital Project
 Entities.PlanObject.name                = Name
 Entities.Stage                          = Stage
 Entities.Stage.name                     = Name
