--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -27,11 +27,14 @@ Entities.HProject                       = \u041A\u0440\u0443\u043F\u043D\u044B\u
 Entities.HProject.code                  = \u041A\u043E\u0434
 Entities.HProject.name                  = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 Entities.LocalEstimate                  = \u041B\u043E\u043A\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
+Entities.Mark                           = \u041C\u0430\u0440\u043A\u0430
+Entities.Mark.name                      = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 Entities.Milestone                      = \u042D\u0442\u0430\u043F
 Entities.ObjectEstimate                 = \u041E\u0431\u044A\u0435\u043A\u0442\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
 Entities.Phase                          = \u0424\u0430\u0437\u0430
 Entities.PlanObject                     = \u041E\u0431\u044A\u0435\u043A\u0442 \u0433\u0435\u043D\u043F\u043B\u0430\u043D\u0430
 Entities.PlanObject.code                = \u041A\u043E\u0434
+Entities.PlanObject.cproject            = \u041A\u0430\u043F\u0438\u0442\u0430\u043B\u044C\u043D\u044B\u0439 \u043F\u0440\u043E\u0435\u043A\u0442
 Entities.PlanObject.name                = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 Entities.Stage                          = \u0421\u0442\u0430\u0434\u0438\u044F
 Entities.Stage.name                     = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
